# ChimeraX_XMAS_bundle

./: .gitignore  .gitlab-ci.yml  CHANGES.txt  INSTALL.txt  Makefile  README.md  TO DO  bundle_info.xml  license.txt  pyproject.toml  test.py
manual/: XMAS_manual.docx
src/: Untitled.ipynb  __init__.py  info_file.py  integrate.py  mzidentml.py  read_evidence.py  tool.py  z_score.py
src/docs/user/tools/: manual.html  tutorial.html  ~$manual.html
src/docs/user/tools/manual_bestanden/: filelist.xml  header.html  props002.xml
src/matplotlib_venn/: __init__.py  _arc.py  _region.py  _util.py  _venn2.py  _venn3.py
user_manual/: XMAS_manual.md
