[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
# ChimeraX bundle names must start with "ChimeraX-"
# to avoid clashes with package names in pypi.python.org.
# When uploaded to the ChimeraX toolshed, the bundle
# will be displayed without the ChimeraX- prefix.
# To override this name, see the [chimerax] section
# below.
name = "ChimeraX-XMAS"
version = "1.1.3"
license = { text = "OSI Approved, Apache Software License" }
authors= [{name = "R.A. Scheltema", email="r.a.scheltema@uu.nl"}]
description = "Analyze and visualize crosslinking mass spectrometry data in a structural context"
dependencies = [
	"ChimeraX-Core >=1.6",
	"ChimeraX-UI >=1.6",
	"pandas",
	"openpyxl",
	"seaborn",
	"qtrangeslider"
]
dynamic = ["classifiers", "requires-python"]

[project.readme]
content-type = "text"
text="""XMAS - or Cross(X)link Mapping and AnalySis - aligns the sequences of 
crosslinked peptides from crosslinking mass spectrometry (XL-MS) data 
to the sequences of structural models, thereby obtaining crosslinked 
positions. These crosslinks are mapped and displayed as pseudobond 
models. XMAS features tools for visualization, analysis, and data 
handling, providing insight into reproducibility and reliability of 
XL-MS data. It also enables XL-MS-based evaluation of theoretical 
structural models, as well as integration with DisVis and HADDOCK for 
integrative modelling."""
	
[project.urls]
Home = "https://scheltemalab.com/software/software-xmas/"

# To use a dynamic version, add "version" to the project.dynamic
# list, then remove project.version
# [tool.setuptools.dynamic]
# version = { attr = "src.__version__" }

[chimerax]
# Set this value to a string to give your module name a
# different installed name than the project name. For
# example, ChimeraX-AlignmentHdrs uses this option to
# name its package "alignment_headers"
module-name-override = "XMAS"
min-session-version = 1
max-session-version = 1
categories = ["Structure Analysis", "Crosslinking Mass Spectrometry", "Input/Output"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research"]

[chimerax.tool."XMAS"]
category = "Structure Analysis"
description = "Analyze and visualize crosslinking mass spectrometry data in a structural context"

[chimerax.extra-files]
"src/docs/user/tools/figures" = ["user_manual/figures/*"]
"src/docs/user/tools/" = ["user_manual/manual.html"]
